[package]
name = "epub2mdbook"
version = "0.16.0"
edition = "2024"
description = "A tool to convert EPUB files to MDBook format"
authors = ["Maverick Liu <maverick.liu42@gmail.com>"]
license = "MIT"
repository = "https://github.com/cyborg42/epub2mdbook"
keywords = ["epub", "mdbook", "converter", "ebook"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
epub = "2.1.5"
htmd = "0.5.0"
mdbook-core = "0.5.2"
regex = "1.12.2"
thiserror = "2.0.17"
toml = "0.9.10"
