[package]
name = "epub2mdbook"
version = "0.17.0"
edition = "2024"
description = "A tool to convert EPUB files to MDBook format"
authors = ["Maverick Liu <maverick.liu42@gmail.com>"]
license = "MIT"
repository = "https://github.com/cyborg42/epub2mdbook"
keywords = ["epub", "mdbook", "converter", "ebook"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
epub = "2.1.5"
htmd = "0.5.4"
mdbook-core = "0.5.2"
regex = "1.12.3"
thiserror = "2.0.18"
toml = "1.1.2"
